--- a/src/css/filters.css
+++ b/src/css/filters.css
@@ -38,8 +38,8 @@
 
 .filter-categories {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 12px;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 8px;
   list-style: none;
 }
 
@@ -50,7 +50,7 @@
   }
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1400px) {
   .filter-categories {
     grid-template-columns: repeat(4, 1fr);
   }
