--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -8,7 +8,7 @@
   gap: 24px;
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1400px) {
   .main-wrap-inner {
     flex-direction: row;
     align-items: flex-start;
