--- a/src/css/quote.css
+++ b/src/css/quote.css
@@ -49,7 +49,7 @@
   }
 }
 
-@media only screen and (min-width: 1200px) {
+@media only screen and (min-width: 1400px) {
   .quote-section {
     padding: 0;
   }
